salesforce/force-app/main/default/objects/Loan_Application__c/fields/Applicant_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Annual_Income__c</fullName>
    <label>Applicant Annual Income</label>
    <precision>15</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>