salesforce/force-app/main/default/objects/Loan_Application__c/fields/ML_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ML_Approval_Status__c</fullName>
    <label>ML Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Manual Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>