salesforce/force-app/main/default/objects/Loan_Application__c/fields/ML_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>ML_Confidence_Score__c</fullName>
    <label>ML Confidence Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>